--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -23,9 +23,23 @@ graph LR
 
 Choosing the right technology stack is one of the most critical decisions teams must make when building LLM-powered applications. The wrong choices can lead to vendor lock-in, limited flexibility, and high switching costs, all of which can stifle innovation and slow down iteration cycles.
 
-Thus we want to introduce the “OSS LLMOps Stack” as an open, well-integrated, scalable, and established setup backed by large OSS communities. It includes [LiteLLM](https://docs.litellm.ai/docs) ([GitHub](https://github.com/BerriAI/litellm)) as an LLM Proxy/Gateway and [Langfuse](https://langfuse.com/docs) ([GitHub](https://github.com/langfuse/langfuse)) for Observability, Evaluation and Prompt Management.
+Thus we want to introduce the "Open Source LLMOps Stack" as an open, well-integrated, scalable, and established setup backed by large OSS communities. It includes [LiteLLM](https://docs.litellm.ai/docs) ([GitHub](https://github.com/BerriAI/litellm)) as an LLM Proxy/Gateway and [Langfuse](https://langfuse.com/docs) ([GitHub](https://github.com/langfuse/langfuse)) for Observability, Evaluation and Prompt Management.
 
 You can [deploy](/docs) this stack in a matter of minutes via the templates (HELM or docker compose) in your own environment.
+
+Many teams are using this stack in production, some quotes by active contributors and users:
+
+> “”
+>
+> — firstname lastname, title
+
+> “”
+>
+> — firstname lastname, title
+
+> “”
+>
+> — firstname lastname, title
 
 Read on to learn more about the stack.
 
@@ -155,4 +169,4 @@ We are very much looking forward to your feedback!
 
 - OSS LLMOps Stack: [Repo](https://github.com/langfuse/oss-llmops-stack)
 - LiteLLM: [Issue tracker](https://github.com/BerriAI/litellm/issues), [Discord](https://discord.com/invite/wuPM9dRgDw)
-- Langfuse: [Issue tracker](https://github.com/langfuse/langfuse/issues), [GitHub Discussions](https://github.com/langfuse/langfuse/discussions), [Discord](https://langfuse.com/discord)
+- Langfuse: [Issue tracker](https://github.com/langfuse/langfuse/issues), [GitHub Discussions](https://github.com/langfuse/langfuse/discussions), [Discord](https://langfuse.com/discord), [Ask AI](https://langfuse.com/docs/ask-ai)
