--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -5,12 +5,14 @@ description: Introducing the Open Source LLMOps Stack based on LiteLLM and Langf
 
 # Open Source LLMOps Stack
 
+<div class="mt-10" />
+
 ```mermaid
 graph LR
   LLM["<strong>LLM</strong><br/>API or service"]
   App["<strong>Application</strong>"]
-  Langfuse["<strong>Langfuse</strong><br/>Tracing/Observability<br/>Evaluation<br/>Prompt Management<br/>Cost Tracking<br/>Security Monitoring<br/>Experiments<br/>... (see docs)"]
-  LiteLLM["<strong>LiteLLM</strong><br/>Schema translation<br/>Rate limiting<br/>PII redaction<br/>Caching"]
+  Langfuse["<img src='/langfuse_logo.svg' width='60' height='60' alt='Langfuse Logo' style='margin-bottom: 15px; ' class='show-light' /><img src='/langfuse_logo_dark.svg' width='60' height='60' alt='Langfuse Logo' style='margin-bottom: 15px; ' class='show-dark' />Tracing/Observability<br/>Evaluation<br/>Prompt Management<br/>Cost Tracking<br/>Security Monitoring<br/>Experiments<br/>... (see docs)"]
+  LiteLLM["<img src='/litellm_logo.png' width='60' height='60' alt='LiteLLM Logo' style='margin-bottom: 10px;' class='show-light' /><img src='/litellm_logo_dark.png' width='60' height='60' alt='LiteLLM Logo' style='margin-bottom: 10px;' class='show-dark' />Schema translation<br/>Rate limiting<br/>PII redaction<br/>Caching<br/>... (see docs)"]
 
   App -->|async tracing|Langfuse
   Langfuse -->|prompt management| App
@@ -23,7 +25,7 @@ graph LR
 
 Choosing the right technology stack is one of the most critical decisions teams must make when building LLM-powered applications. The wrong choices can lead to vendor lock-in, limited flexibility, and high switching costs, all of which can stifle innovation and slow down iteration cycles.
 
-Thus we want to introduce the "Open Source LLMOps Stack" as an open, well-integrated, scalable, and established setup backed by large OSS communities. It includes [LiteLLM](https://docs.litellm.ai/docs) ([GitHub](https://github.com/BerriAI/litellm)) as an LLM Proxy/Gateway and [Langfuse](https://langfuse.com/docs) ([GitHub](https://github.com/langfuse/langfuse)) for Observability, Evaluation and Prompt Management.
+Thus we introduce the "Open Source LLMOps Stack" as an open, well-integrated, scalable, and established setup backed by large OSS communities. It includes [LiteLLM](https://docs.litellm.ai/docs) ([GitHub](https://github.com/BerriAI/litellm)) as an LLM Proxy/Gateway and [Langfuse](https://langfuse.com/docs) ([GitHub](https://github.com/langfuse/langfuse)) for Observability, Evaluation and Prompt Management.
 
 You can [deploy](/docs) this stack in a matter of minutes via the templates (HELM or docker compose) in your own environment.
 
@@ -54,28 +56,27 @@ Building reliable LLM applications requires a stack that balances flexibility, o
 
 ## LiteLLM
 
-> Model Routing, Load Balancing, and API Abstraction
+> Model Routing, API Unification, Cost Management, Model Access Management
 
-[LiteLLM](https://docs.litellm.ai/docs) is an open-source LLM gateway that simplifies LLM usage by providing a unified API for interacting with multiple LLM providers. It offers teams:
+[LiteLLM](https://docs.litellm.ai/docs) is an open-source framework that simplifies LLM usage by providing a unified API for interacting with multiple LLM providers. It offers teams:
 
-### Model Routing & API Unification
+### 1. Model Routing & API Unification
 
-- **Seamless API abstraction** – A single API layer that enables integration with models from OpenAI, Anthropic, Hugging Face, VertexAI, and more.
-- **Dynamic model routing** – Configure rules to route requests based on performance, cost, or provider availability.
+- **OpenAI-Compatible API** – Access 100+ LLMs in the OpenAI format: Bedrock, VertexAI, Anthropic, Hugging Face, vLLM and more.
 - **Built-in failover mechanisms** – Automatically switch to alternative models if a provider is down.
 - **Load balancing** – Distribute traffic efficiently across multiple LLMs for scalability and reliability.
 
-### Observability & Cost Management
+### 2. Observability & Cost Management
 
 - **Logging & request tracking** – Capture logs of all requests and responses for debugging and analysis.
-- **Spend monitoring & budgeting** – Track API usage and costs across different providers to optimize expenses.
-- **Latency tracking** – Identify and minimize delays in model responses.
-
-### Prompt Management & Caching
-
+- **Model Access Controls** \- Control access to models by virtual keys, teams
+- **Budgets & Rate Limits** \- Track spend and set budget limits across models, keys, teams and custom tags
 - **Prompt versioning & A/B testing** – Manage different prompt iterations and compare effectiveness.
-- **In-memory caching** – Reduce redundant calls and lower latency with built-in caching.
-- **Streaming support** – Handle large responses more efficiently with token streaming.
+
+### 3. Model Access Management
+
+- **Virtual Keys** – Control access to models by virtual keys, teams and model access groups
+- **Self-serve Portal (SSO) \-** Allow teams to login via SSO and manage their own keys in production with a self-serve key management portal
 
 ## Langfuse
 
@@ -85,7 +86,7 @@ Building reliable LLM applications requires a stack that balances flexibility, o
 
 [Langfuse](https://langfuse.com/docs) complements LiteLLM by offering deep visibility and structured evaluations for LLM-powered applications. It is designed around three core capabilities:
 
-### Observability
+### 1. Observability
 
 - **Trace and monitor** multi-step LLM workflows, identifying bottlenecks or failure points.
 - **Track cost and latency metrics** to optimize LLM spending.
@@ -93,14 +94,14 @@ Building reliable LLM applications requires a stack that balances flexibility, o
 - **Enable real-time debugging** to trace LLM requests and responses effectively.
 - **Public APIs** to build custom workflows based on the data in Langfuse.
 
-### Evaluation
+### 2. Evaluation
 
 - **Evaluate responses** with **both automatic and human-driven** assessments.
 - **Custom evaluation** via the API and SDKs to build external eval workflows or track user feedback.
 - **Manage datasets for evaluations** – Create labeled datasets from production traces for structured performance assessment.
 - **Experiment with different models and workflows** – Test and refine LLM interactions without modifying production systems.
 
-### Prompt Management
+### 3. Prompt Management
 
 - **Collaborative Editing** – Change prompts via UI, API, or SDKs.
 - **Versioning & Experimentation** – Store, track, and test different prompt versions efficiently.
