--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -127,10 +127,10 @@ Choosing the right LLM Ops stack is critical for teams that require long-term fl
 By adopting the **Open-Source LLM Ops Stack**, teams gain:
 
 - **Self-Hosting & Open Source** – Both LiteLLM and Langfuse are open-source, allowing teams to deploy them in their own infrastructure while ensuring complete control over their LLM operations.
-- **Enterprise-Ready & Scalable** – These tools are built to handle large-scale deployments with robust performance, failover mechanisms, and high-availability setups.
-- **Battle-Tested & Well-Documented** – Both projects are widely used in production environments and offer extensive documentation to support engineering teams.
-- **Large Community & Active Development** – A vibrant open-source community actively contributes to both LiteLLM and Langfuse, ensuring continuous improvements, feature additions, and long-term viability.
 - **Technology Independence** – Avoid reliance on a single cloud provider or LLM vendor, ensuring the ability to switch models and providers with minimal friction.
+- **Enterprise-Ready & Scalable** – These tools are built to handle large-scale deployments with robust performance, failover mechanisms, and high-availability setups.
+- **Battle-Tested & Well-Documented** – Both projects (with a combined 25K Github Stars) are widely used in production environments and offer extensive documentation to support engineering teams.
+- **Large Community & Active Development** – A vibrant open-source community actively contributes to both LiteLLM and Langfuse, ensuring continuous improvements, feature additions, and long-term viability.
 
 ## Getting Started with the Open Source LLMOps Stack
 
