--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -63,7 +63,7 @@ Many teams are using this stack in production, some quotes by active contributor
 
 Read on to learn more about the stack.
 
-## LiteLLM
+## <span className="sr-only">LiteLLM</span><img src='/litellm_logo.png' alt='LiteLLM Logo' className='inline-block h-14 dark:hidden' class='show-light' /><img src='/litellm_logo_dark.png' alt='LiteLLM Logo' className='h-14 hidden dark:inline-block' class='show-dark' /> [#litellm]
 
 > Model Routing, API Unification, Cost Management, Model Access Management
 
@@ -87,7 +87,7 @@ Read on to learn more about the stack.
 - **Virtual Keys** – Control access to models by virtual keys, teams and model access groups
 - **Self-serve Portal (SSO) \-** Allow teams to login via SSO and manage their own keys in production with a self-serve key management portal
 
-## Langfuse
+## <span className="sr-only">Langfuse</span><img src='/langfuse_logo.svg' alt='Langfuse Logo' className='inline-block h-10 dark:hidden' class='show-light' /><img src='/langfuse_logo_dark.svg' alt='Langfuse Logo' className='h-10 hidden dark:inline-block ' class='show-dark' /> [#langfuse]
 
 > Observability, Evaluation, and Prompt Management
 
