--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -49,19 +49,7 @@ Choosing the right technology stack is one of the most critical decisions teams 
 
 Thus we introduce the "Open Source LLMOps Stack" as an open, well-integrated, scalable, and established setup backed by large OSS communities. It includes [LiteLLM](https://docs.litellm.ai/docs) ([GitHub](https://github.com/BerriAI/litellm)) as an LLM Proxy/Gateway and [Langfuse](https://langfuse.com/docs) ([GitHub](https://github.com/langfuse/langfuse)) for Observability, Evaluation and Prompt Management.
 
-You can [deploy](/docs) this stack in a matter of minutes via the templates (HELM or docker compose) in your own environment.
-
-Many teams are using this stack in production, some quotes by active contributors and users:
-
-> "Generative AI technology evolves at an unprecedented rate. LiteLLM is an amazing product that helps our Engineering teams quickly prototype, launch, and deliver new AI features at scale. Langfuse instrumentation gives our teams the visibility to quickly pinpoint issues across our LLMops stack and resolve them in minutes. Together, these products are essential at Fletch and consistently deliver best-in-class experiences for our customers."
->
-> — Darien Kindlund, VP of Technology at Fletch
-
-> "Using LiteLLM with Langfuse has significantly improved our ability to easily monitor our LLM usage across all of our applications at ai.moda. It's like Sentry, but for AI!"
->
-> — David Manouchehri, Director at ai.moda
-
-Read on to learn more about the stack.
+You can [deploy](/docs) this stack in a matter of minutes via the templates (HELM or docker compose) in your own environment. Read on to learn more.
 
 ## <span className="sr-only">LiteLLM</span><img src='/litellm_logo.png' alt='LiteLLM Logo' className='inline-block h-14 dark:hidden' class='show-light' /><img src='/litellm_logo_dark.png' alt='LiteLLM Logo' className='h-14 hidden dark:inline-block' class='show-dark' /> [#litellm]
 
