--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -54,32 +54,32 @@ Selection of users/contributors:
 <div className="flex flex-wrap gap-5 mt-4">
   <img
     src="/lemonade_logo_light.svg"
-    alt="Lemonade"
+    alt="Lemonade Logo"
     className="h-6 dark:hidden"
   />
   <img
     src="/lemonade_logo_dark.svg"
-    alt="Lemonade"
+    alt="Lemonade Logo"
     className="h-6 hidden dark:block"
   />
-  <img src="/rocketmoney_logo.svg" alt="Rocket Money" className="h-6" />
-  <img src="/samsara_dark.png" alt="Samsara" className="h-6 dark:hidden" />
+  <img src="/rocketmoney_logo.svg" alt="Rocket Money Logo" className="h-6" />
+  <img src="/samsara_dark.png" alt="Samsara Logo" className="h-6 dark:hidden" />
   <img
     src="/samsara_light.png"
-    alt="Samsara"
+    alt="Samsara Logo"
     className="h-6 hidden dark:block"
   />
-  <img src="/twilio_logo_light.svg" alt="Twilio" className="h-6 dark:hidden" />
+  <img src="/twilio_logo_light.svg" alt="Twilio Logo" className="h-6 dark:hidden" />
   <img
     src="/twilio_logo_dark.svg"
-    alt="Twilio"
+    alt="Twilio Logo"
     className="h-6 hidden dark:block"
   />
-  <img src="/adobe_logo.svg" alt="Adobe" className="h-6" />
+  <img src="/adobe_logo.svg" alt="Adobe Logo" className="h-6" />
 
-  <img src="/fletch_dark.svg" alt="Fletch" className="h-6" />
-  <img src="/cornelsen_logo.png" alt="Cornelsen" className="h-6" />
-  <img src="/weather_logo.svg" alt="The Weather Company" className="h-6" />
+  <img src="/fletch_dark.svg" alt="Fletch Logo" className="h-6" />
+  <img src="/cornelsen_logo.png" alt="Cornelsen Logo" className="h-6" />
+  <img src="/weather_logo.svg" alt="The Weather Company Logo" className="h-6" />
 </div>
 
 <div className="mt-8 mb-12">
